--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>大師兄嬌喘了一聲❤</title>
+        <title>CV_P</title>
     </head>
                                 <!--透過縮排來分清楚head&body-->
     <body>
